--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node src/index.ts",
     "clean": "rimraf dist/*",
     "compile": "tsc",
-    "build": "npm-run-all clean tsc",
+    "build": "npm-run-all clean compile",
     "start": "node ."
   },
   "keywords": [],
