--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "clean": "rimraf dist/*",
+    "dev": "ts-node script/index.ts",
+    "clean": "rimraf script/**/*.js",
     "compile": "tsc",
     "build": "npm-run-all clean compile",
     "start": "node ."
