--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "rimraf script/**/*.js",
     "compile": "tsc",
     "build": "npm-run-all clean compile",
-    "start": "node ."
+    "start": "node .",
+    "serve": "serve"
   },
   "keywords": [],
   "author": "sasakulab",
@@ -18,5 +19,8 @@
     "rimraf": "^4.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "serve": "^14.2.0"
   }
 }
